# nest-template/src/users-feature/generated-schemas/read-users-relations.schema.ts
@@ -1,9 +1,25 @@
 import { GenericComparable, comparable } from '../../geen/lib/comparable';
 import * as v from 'valibot';
+import ReadProfilesRelationsSchema, {
+	ReadProfilesRelations,
+} from '../../profiles-feature/generated-schemas/read-profiles-relations.schema';
 
-export class ReadUsersRelations {}
+export class ReadUsersRelations {
+	profile?: ReadProfilesRelations | string | boolean;
+}
 
-const ReadUsersRelationsSchema: v.GenericSchema<ReadUsersRelations> = v.object({});
+const ReadUsersRelationsSchema: v.GenericSchema<ReadUsersRelations> = v.object({
+	profile: v.optional(
+		v.union([
+			v.pipe(
+				v.union([v.string(), v.boolean()]),
+				v.transform((input) => (input === 'true' ? true : false)),
+				v.boolean(),
+			),
+			v.lazy(() => ReadProfilesRelationsSchema),
+		]),
+	),
+});
 
 export default ReadUsersRelationsSchema;
 
